Down to 1 error.  Implementing FFI interface.