@@ -14,7 +14,10 @@
                  [org.roaringbitmap/RoaringBitmap  "0.9.0"]
                  [techascent/tech.resource         "5.02"]
                  [techascent/tech.jna "4.05" :scope "provided"]]
-  :java-source-paths ["java"]
+  :java-source-paths ["java" "java_jdk16"]
+  :javac-options ["--add-modules" "jdk.incubator.foreign"]
+  :jvm-opts ["--add-modules" "jdk.incubator.foreign" "-Dforeign.restricted=permit"]
+  :source-paths ["src" "src_jdk_16"]
   :profiles {:dev
              {:dependencies [[criterium "0.4.5"]
                              [uncomplicate/neanderthal "0.35.0"]
